samples/_failures_safe/1761505615_d26fa5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_391ad31c.c: In function ‘main’:
./samples/SAFE/__tmp_391ad31c.c:146:5: error: expected declaration or statement at end of input
  146 |     printf("\nVector Operations:\n");
      |     ^~~~~~
